<resources>
    <string name="app_name">Indopay News App</string>
    <string name="image_headline">Image</string>
    <string name="nama_penulis">Nama penulis</string>
    <string name="_10_jan_2021">10 Jan 2021</string>
    <string name="title_example">Judul berita</string>
    <string name="user_penulis">image penulis</string>
    <string name="date">tanggal</string>
    <string name="text_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="button_share_location">Button Share Location</string>
    <string name="latitude_info">Latitude: %s</string>
    <string name="longitude_info">Longitude: %s</string>
    <string name="current_location">Current Location</string>
    <string name="name_of_city">Nama Kota: \n%s</string>
    <string name="health_news">Health News</string>
    <string name="science_news">Science News</string>
    <string name="sports_news">Sports News</string>
</resources>